# openUItest

./: .gitmodules
backend/: CMakeLists.txt  main.cpp
database/: setup.sql
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
